@@ -34,8 +34,8 @@
 ###################################################################################
 
 from ctypes import *
-from win32con import CF_TEXT, GHND
-
+from winconstants import CF_TEXT, GHND
+    
 OpenClipboard = windll.user32.OpenClipboard
 EmptyClipboard = windll.user32.EmptyClipboard
 GetClipboardData = windll.user32.GetClipboardData
